# muxer-ffmpeg

./: .gitignore  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/workflows/: release.yml  test.yml  wheels.yml
scripts/: build_ffmpeg.py  smoke_wheel.py  validate_release.py
src/muxer_ffmpeg/: __init__.py  _ffmpeg.py  _merge.py
tests/: test_ffmpeg.py  test_merge.py
